[tool.poetry]
name = "multi_agent_simulation"
version = "0.1.0"
description = ""
authors = ["Sebastian Jitaru <s.jitaru@prioticket.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
